# upkeep

./: .gitignore  Cargo.toml  flake.nix  readme.md
Docs/: tech_planning.md
Docs/diagrams/: .$class_diagram.drawio.png.bkp
Docs/images/: .$class_diagram.drawio.png.bkp
src/: args.rs  lib.rs  main.rs
src/database_ops/: add_ops.rs  database_ops.rs  edit_ops.rs  fix_ops.rs  mod.rs  output_ops.rs  remove_ops.rs  report_ops.rs  show_ops.rs
src/sql/: setup.sql
src/tests/: sql_test.rs
tests/: mod.rs  sql_test.rs
