[package]
name = "upkeep"
version = "0.1.0"
edition = "2021"
authors = ["mmed"]
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.10.1"
