[package]
name = "upkeep"
description = "A command-line tool for logging and tracking machine and component statuses for later maintenance."
version = "1.0.0"
edition = "2021"
authors = ["mmed"]
readme = "readme.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
